--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="BasicHttpAuthExample">
 <head>
     <meta charset="utf-8" />
-    <title>AngularJS Basic HTTP Authentication Example</title>
+    <title>CAM4TV</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
 </head>
 <body>
