--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="utf-8" />
     <title>CAM4TV</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
+    <base href="/cam4tv/">
+    <style>
+	    body {
+		    background-color: #eee;
+	    }
+	</style>
 </head>
 <body>
 
     <div class="jumbotron">
         <div class="container">
-            <div class="col-xs-offset-2 col-xs-8">
+            <div>
                 <div ng-view></div>
             </div>
         </div>
