--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="modules/authentication/services.js"></script>
     <script src="modules/authentication/controllers.js"></script>
     <script src="modules/home/controllers.js"></script>
+    <script src="modules/secondscreen/services.js"></script>
     <script src="modules/secondscreen/controllers.js"></script>
 </body>
 </html>
